<resources>
    <string name="app_name">app-video-user</string>
    <string name="main_status_label">连接状态</string>
    <string name="main_connect">连接</string>
    <string name="main_disconnect">断开</string>
    <string name="main_subscribe">发送订阅</string>
    <string name="main_unsubscribe">取消订阅</string>
    <string name="main_send">发送消息</string>
    <string name="main_topic_hint">请输入订阅主题</string>
    <string name="main_message_hint">请输入待发送消息</string>
    <string name="main_received_label">消息日志</string>
    <string name="main_default_topic">video-room</string>


    <string name="action_settings">Settings</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="please_enter_password">请输入密码</string>
    <string name="please_enter_email">请输入账号</string>
    <string name="login">Login</string>

    <string name="main_tab_home">首页</string>
    <string name="main_tab_channel">频道</string>
    <string name="main_tab_short_drama">短剧</string>
    <string name="main_tab_vip">会员</string>
    <string name="main_tab_mine">我的</string>

</resources>
